# alfarobi_ws

ALFAROBI-Configuration/Main/: behavioral.yaml
ALFAROBI-Controller/src/: controller.cpp  controller_node.cpp
ALFAROBI-Main/alfarobi/: CMakeLists.txt  package.xml
ALFAROBI-Main/alfarobi/include/alfarobi/: alfarobi.h  ball_tracker.h  behavioral.h  cat2_tracker.h  controller.hpp  dribblerv13.h  goalpost_tracker.h  passer.h  pillar_tracker.h  square_tracker.h
ALFAROBI-Main/alfarobi/launch/: dribbler.launch  passerA.launch
ALFAROBI-Main/alfarobi/src/: alfarobi_node.cpp  controller.cpp  controller_node.cpp
ALFAROBI-Main/alfarobi/src/olympic/: dribblerv13.cpp  passer.cpp  penalty_manual.cpp  runner.cpp
ALFAROBI-Main/alfarobi/src/soccer/: behavioral.cpp  kepeer.cpp  soccer.cpp
ALFAROBI-Motion/head_control_module/src/: head_control_module.cpp
ALFAROBI-Motion/odometry/src/: odometry.cpp
ALFAROBI-Motion/op3_manager/src/: op3_manager.cpp
ALFAROBI-Motion/quintic_walk/: CMakeLists.txt  package.xml
ALFAROBI-Motion/quintic_walk/config/: config.yaml  fuzzy.yaml
ALFAROBI-Motion/quintic_walk/include/quintic_walk/: quinticwalk.h
ALFAROBI-Motion/quintic_walk/src/: quinticwalk.cpp
ALFAROBI-Tools/odom_monitor/src/: dataviewer.cpp
ALFAROBI-Tools/op3_gui_demo/src/: main_window.cpp  main_window_ext.cpp  qnode_ext.cpp
ALFAROBI-Tools/op3_gui_demo/ui/: main_window.ui
ALFAROBI-Vision/img_input/launch/: img_input.launch
ALFAROBI-Vision/v9_ball_detector/config/: lifecam_cinema_200926.yaml  tabel_warna.xml
ALFAROBI-Vision/v9_ball_detector/include/v9_ball_detector/: v9_ball_detector.h
ALFAROBI-Vision/v9_ball_detector/src/: v9_ball_detector.cpp
ALFAROBI-Vision/v9_ball_tracker/: package.xml
ALFAROBI-Vision/v9_ball_tracker/src/: v9_ball_tracker.cpp
ALFAROBI-Vision/v9_localization/include/v9_localization/: v9_localization.h
ALFAROBI-Vision/v9_localization/launch/: v9_localization.launch
ALFAROBI-Vision/v9_localization/src/: v9_localization.cpp
ALFAROBI-Vision/vision_monitor/launch/: vision_monitor.launch
ALFAROBI-Vision/vision_monitor/src/: mainwindow.cpp
ALFAROBI-Vision/vision_utils/include/vision_utils/: vision_common.h
DynamixelSDK/c++/example/dxl_monitor/: dxl_monitor.cpp
DynamixelSDK/c++/example/dxl_monitor/linux64/: dxl_monitor
